# omegaflow

./: .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml
crates/nebra-api/src/: main.rs
crates/nebra-core/: Cargo.toml
crates/nebra-core/src/: field.rs  lib.rs
crates/nebra-core/tests/: numerics.rs
crates/nebra-pilot/: Cargo.toml
crates/nebra-pilot/src/: main.rs
crates/omegaflow-client/: Cargo.toml
crates/omegaflow-client/src/: main.rs
crates/omegaflow-client/static/: eval_state.wgsl
crates/omegaflow-client/tests/: integration_tests.rs
crates/omegaflow-pool/src/: main.rs
crates/omegaflow-server/: Cargo.toml
crates/omegaflow-server/src/: lib.rs  main.rs  state.rs
crates/omegaflow-server/static/: client.js  dict_glsl.glsl  dict_wgsl.wgsl  eval_logic.glsl  eval_perception.glsl  eval_state.glsl  manifest.json  webgl.js  webgpu.js
crates/omegaflow-wasm/: Cargo.toml
crates/omegaflow-wasm/src/: lib.rs
docs/: config.yaml  foundation.yaml  nebra.yaml  omegaflow.yaml
home/johannes/projects/omegaflow/: README.md
