[package]
name = "nebra-pilot"
version = "0.1.0"
edition = "2024"
authors = ["Nebra Flight Software"]
description = "APPEAL-compliant autonomous compiler-loop agent"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
